src/test/ui/const-generics/issues/issue-62456.min.stderr
error: generic parameters must not be used inside const evaluations
  --> $DIR/issue-62456.rs:7:20
   |
LL |     let _ = [0u64; N + 1];
   |                    ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments `N`

error: aborting due to previous error

